--- a/src/css/style.css
+++ b/src/css/style.css
@@ -256,13 +256,15 @@ button:focus {
   content: "";
   position: relative;
   display: block;
-  height: 5px;
+  height: 4px;
   width: 0;
   border-radius: 16px;
   background: var(--nav-item-hover-bg);
   bottom: 1px;
-  left: 0;
+  /*left: 0;*/
   z-index: -1;
+  left: 50%;
+  transform: translateX(-50%);
   transition: all 0.3s ease-out 0s;
 }
 
