--- a/src/css/responsive.css
+++ b/src/css/responsive.css
@@ -77,7 +77,7 @@
     align-items: center;
     height: 100%;
     padding: 0 ;
-    padding-bottom: 20px;
+    /*padding-bottom: 20px;*/
     margin: 0 !important;
   }
 
