--- a/src/css/style.css
+++ b/src/css/style.css
@@ -100,6 +100,17 @@ button:focus {
   box-shadow: none !important;
 }
 
+.fade-in-section {
+  opacity: 0;
+  transform: translateY(30px);
+  transition: opacity 0.4s ease-out, transform 0.6s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+}
+
+.fade-in-section.is-visible {
+  opacity: 1;
+  transform: translateY(0);
+}
+
 /*================================================================
   1. Preloader
 ================================================================*/
