--- a/src/css/responsive.css
+++ b/src/css/responsive.css
@@ -59,7 +59,7 @@
     left: 0;
     right: 0;
     width: 100%;
-    height: 70px;
+    height: calc(70px + env(safe-area-inset-bottom));
     background-color: var(--navbar-bg-mobile);
     backdrop-filter: blur(10px);
     -webkit-backdrop-filter: blur(10px);
@@ -74,6 +74,7 @@
     align-items: center;
     height: 100%;
     padding: 0 ;
+    padding-bottom: env(safe-area-inset-bottom);
     /*padding-bottom: 20px;*/
     margin: 0 !important;
   }
