--- a/src/css/App.css
+++ b/src/css/App.css
@@ -1,3 +1,10 @@
 .App {
   text-align: center;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+.content-wrap {
+  flex: 1;
 }
