--- a/src/css/index.css
+++ b/src/css/index.css
@@ -4,4 +4,5 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-image: var(--bg-body);
+  background-color: #050b13;
 }
