--- a/src/css/responsive.css
+++ b/src/css/responsive.css
@@ -56,7 +56,7 @@
     backdrop-filter: blur(10px);
     -webkit-backdrop-filter: blur(10px);
     padding: 1rem;
-    border-radius: 0.5rem;
+    border-radius: 15px;
     border: 1px solid rgba(255, 255, 255, 0.1);
     z-index: 10;
   }
