Upgraded from React 17 to React 19.1.0.

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1426,7 +1426,7 @@ body.homepage .home-about-section {
   vertical-align: middle !important;
   text-align: center !important;
   border-radius: 6px !important;
-
+  border: 1px solid var(--button-border-primary) !important;
 }
 
 .fork-btn-inner:hover {
@@ -1437,6 +1437,11 @@ body.homepage .home-about-section {
 
 .fork-btn-inner::after {
   display: none !important;
+}
+
+.navbar-fork-icon,
+.navbar-star-icon {
+  color: white !important;
 }
 
 /*================================================================
